# GitSpark

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: codeql.yml
src/: ai.rs  git.rs  main.rs  models.rs  storage.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: buttons.rs  changes_list.rs  commit.rs  diff.rs  history_list.rs  history_viewer.rs  menu_bar.rs  mod.rs  settings_window.rs  sidebar.rs  status_bar.rs  syntax.rs  toolbar.rs
src/ui/primitives/: button.rs  dropdown.rs  row.rs
